feat: LoginPage, RegisterPage, NotFoundPage, HomePage, authStore (redux-toolkit); fix tailwindcss import
