# backend/routes/auth.route.js
@@ -8,6 +8,7 @@ const authRoute = Router();
 authRoute.post('/login', validate(loginSchema), authController.loginUser)
 authRoute.post('/signup', validate(registerUserSchema), authController.signUp)
 authRoute.post('/logout', authController.checkAuth, authController.logout)
+authRoute.post('/refreshToken', authController.refreshToken)
 // authRoute.post('/refreshToken', authController.refreshToken)
 
 export default authRoute;
